#06 - Tipos Primitivos e Manipulação de Dados

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 /OlaMundoJavaFX/dist/
 /OlaMundoJavaFX/build/
 /OlaMundoSwing/dist/
+/TiposPrimitivos/nbproject/private/
+/TiposPrimitivos/build/
+/TesteTipos/nbproject/private/
+/TesteTipos/build/
+/SomaSwing/nbproject/private/
+/SomaSwing/build/
