#07 - Operadores Aritméticos e Classe Math

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /TesteTipos/build/
 /SomaSwing/nbproject/private/
 /SomaSwing/build/
+/OperadoresAritmeticos/nbproject/private/
+/OperadoresAritmeticos/build/
+/OperadoresSwing/nbproject/private/
+/OperadoresSwing/build/
