--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@
 /OperadoresAritmeticos/build/
 /OperadoresSwing/nbproject/private/
 /OperadoresSwing/build/
+/OperadorTernario/nbproject/private/
+/OperadorTernario/build/
+/OperadorTernario/dist/
+/ComparacaoString/nbproject/private/
+/ComparacaoString/build/
+/OperadoresLogicos/nbproject/private/
+/OperadoresLogicos/build/
+/VerificadorIdadeSwing/nbproject/private/
+/VerificadorIdadeSwing/build/
